@@ -1,3 +1,7 @@
+2017-04-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* win32lib.c, mingw32.c: Upsate texlive_gs_init() (w32 only). 
+
 2017-04-14  Karl Berry  <karl@tug.org>
 
 	* texmf.cnf (shell_escape_commands): add texosquery-jre8.
